--- a/templates/dashboard/public_home.html
+++ b/templates/dashboard/public_home.html
@@ -1,3 +1,5 @@
+<!--templates/dashboard/public_home.html -->
+
 <!DOCTYPE html>
 {% load static %}
 
@@ -10,11 +12,11 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>body { font-family: 'Inter', sans-serif; }</style>
-  <link rel="apple-touch-icon" sizes="180x180" href="{% static '/apple-touch-icon.png' %}">
-	<link rel="icon" type="image/png" sizes="32x32" href="{% static '/favicon-32x32.png' %}">
-	<link rel="icon" type="image/png" sizes="16x16" href="{% static '/favicon-16x16.png' %}">
+  <link rel="apple-touch-icon" sizes="180x180" href="{% static 'apple-touch-icon.png' %}">
+	<link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon-32x32.png' %}">
+	<link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon-16x16.png' %}">
 	<link rel="icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}">
-	<link rel="manifest" href="{% static '/site.webmanifest' %}">
+	<link rel="manifest" href="{% static 'site.webmanifest' %}">
 </head>
 <body class="bg-gradient-to-br from-blue-50 to-indigo-100 min-h-screen">
 
