--- a/templates/base.html
+++ b/templates/base.html
@@ -8,9 +8,9 @@
     <script src="https://unpkg.com/htmx.org@1.9.10"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-	<link rel="apple-touch-icon" sizes="180x180" href="{% static '/apple-touch-icon.png' %}">
-	<link rel="icon" type="image/png" sizes="32x32" href="{% static '/favicon-32x32.png' %}">
-	<link rel="icon" type="image/png" sizes="16x16" href="{% static '/favicon-16x16.png' %}">
+	<link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/apple-touch-icon.png' %}">
+	<link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/favicon-32x32.png' %}">
+	<link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon-16x16.png' %}">
 	<link rel="icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}">
 	<link rel="manifest" href="{% static '/site.webmanifest' %}">
     <style>
